scrollbar bug 1

--- a/style.css
+++ b/style.css
@@ -108,6 +108,15 @@ body.croppable {
 	display : block;
 }
 
+.drop-container {
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	position: fixed;
+	z-index: 10;
+}
+
 .selection-rectangle { 
 	top : 0;
     left : 0;
